# edge-deepstream

./: .gitignore  .gitmodules  CONVERSION_SUMMARY.md  CPP_PORT_SUMMARY.md  DECODER_OVERFLOW_FIX.md  FACE_ALIGNMENT_IMPROVEMENT.md  MOTION_STABILITY_GUIDE.md  OPTIMIZATION_GUIDE.md  benchmark_alignment.py  build_cpp.sh  build_enrollment_full_test.sh  build_enrollment_test.sh  build_faiss_test.sh  build_real_face_test.sh  build_simple.sh  convert-model.py  debug_bbox_usage.cpp  edge_deepstream_minimal  main.py  optimize_system.sh  pipeline_performance.json  requirements.txt  rtsp_server.py  run.sh  run_display.sh  run_maxperf.sh  run_motion_optimized.sh  run_optimized.sh  run_realtime.sh  run_rtsp.sh  setup_alignment_tmpfs.sh  test_alignment_validation.cpp  test_crop_analysis.cpp  test_cropping_simple  test_cropping_simple.cpp  test_enrollment_full.cpp  test_enrollment_integration.cpp  test_faiss_cpp  verify_alignment_fix.py
config/: config_arcface.txt  config_arcface_maxperf.txt  config_arcface_optimized.txt  config_arcface_realtime.txt  config_pipeline.toml  config_pipeline_maxperf.toml  config_pipeline_optimized.toml  config_pipeline_realtime.toml  config_pipeline_rtsp.toml  config_tracker_NvDCF_maxperf.yml  config_tracker_maxperf.txt  config_tracker_perf.txt  config_yolov8n_face.txt  config_yolov8n_face_maxperf.txt  config_yolov8n_face_optimized.txt  config_yolov8n_face_realtime.txt
cpp/roi_helper/: CMakeLists.txt  README.md  roi_helper.cpp  roi_helper.h
cpp_src/: CMakeLists.txt  CMakeLists_mqtt_test.txt  CMakeLists_simple.txt  README.md  build_enroll_ops_simple_test.sh  build_full_app.sh  build_tensorrt_test.sh  test_enroll_ops.cpp  test_enroll_ops_fixed.cpp  test_enroll_ops_minimal.cpp  test_enroll_ops_simple.cpp  test_faiss.cpp  test_minimal  test_yolov8n_only.cpp  test_yolov8n_only.cpp.backup
cpp_src/build_alignment_validation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_alignment_validation
cpp_src/build_bbox_debug/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp_src/build_crop_analysis/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_crop_analysis
cpp_src/build_cropping_analysis/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp_src/build_enroll_ops_simple_test/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp_src/build_enroll_ops_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp_src/build_enrollment_full_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_enrollment_full
cpp_src/build_enrollment_test/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp_src/build_event_sender_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_event_sender
cpp_src/build_faiss_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp_src/build_mqtt_test/: CMakeCache.txt  Makefile  cmake_install.cmake  test_mqtt  test_mqtt.cpp
cpp_src/build_mqtt_test/include/: bus_call.h  config_parser.h  edge_deepstream.h  env_utils.h  faiss_index.h  mqtt_listener.h  placeholders.h  tensorrt_infer.h
cpp_src/build_mqtt_test/utils/: config_parser.cpp  mqtt_listener.cpp  perf_stats.cpp  status_codes.cpp
cpp_src/build_perf_stats_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_perf_stats
cpp_src/build_real_face_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_real_face_enrollment
cpp_src/build_simple/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp_src/build_tensorrt_test/: CMakeCache.txt  Makefile  cmake_install.cmake  test_tensorrt
cpp_src/build_tensorrt_test/include/: pipeline.h  placeholders.h
cpp_src/build_tensorrt_test/utils/: enroll_ops.cpp  env_utils.cpp  event_sender.cpp  faiss_index.cpp  gen_feature.cpp  mqtt_listener.cpp  probe.cpp  tensorrt_infer.cpp
cpp_src/cpp/roi_helper/: roi_helper.cpp
cpp_src/include/: edge_deepstream.h  enroll_ops.h  env_utils.h  event_sender.h  faiss_index.h  perf_stats.h  performance_monitor.h  pipeline.h  pipeline.h.gch  placeholders.h  probe.h  source_bin.h  status_codes.h
cpp_src/src/: main.cpp  minimal_main.cpp  pipeline.cpp  probe.cpp  simple_main.cpp  source_bin.cpp
cpp_src/test/: CMakeLists_enroll_ops_simple_test.txt  CMakeLists_faiss_test.txt  CMakeLists_tensorrt_test.txt  build_alignment_validation.sh  build_bbox_debug.sh  build_crop_analysis.sh  build_cropping_analysis.sh  build_engine_test.sh  build_enroll_ops_test.sh  build_event_sender_test.sh  build_faiss_test.sh  build_minimal_test.sh  build_mqtt_test.sh  build_perf_stats_test.sh  build_tensorrt_test.sh  test_cropping_analysis.cpp  test_enroll_ops_config.cpp  test_event_sender.cpp  test_face_engines.cpp  test_faiss.cpp  test_minimal_source_bin.cpp  test_minimal_uridecodebin.cpp  test_motion_stability.sh  test_perf_stats.cpp  test_real_face_enrollment.cpp  test_tensorrt.cpp
cpp_src/test/deepstream_recommended/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deepstream_recommended  main.cpp  source_bin.cpp  source_bin.h
cpp_src/utils/: bus_call.cpp  config_parser.cpp  enroll_ops.cpp  env_utils.cpp  event_sender.cpp  faiss_index.cpp  mqtt_listener.cpp  perf_stats.cpp  probe.cpp
data/index/: faiss.index  labels.json  live.index  live_labels.json
data/known_faces/: Chandler.npy  Monica.npy  Phoebe.npy  Rachel.npy  Ross.npy
gst-nvinfer-custom/: install.sh
gst-nvinfer-custom/gst-nvinfer/: Makefile  align_functions.cpp  align_functions.h  align_functions_cuda.cu  elementwise_minus_cuda.cu  gstnvinfer.h  (+9 more)
python_backup/: README.md  main.py
test/: analyze_corruption.py  check_aligned_quality.py  debug_alignment.py  debug_recognition_pipeline.py  test_alignment_fix.py  test_recognized_vs_aligned.py  test_yolo_landmark_order.py
tools/: build_faiss_cpu.sh  build_faiss_gpu_jetson.sh  build_faiss_index.py  fix_decoder_overflow.py  monitor_performance.py  probe_faiss_usage.py
utils/: bus_call.py  enroll_ops.py  event_sender.py  faiss_index.py  gen_feature.py  parser_cfg.py  perf_stats.py  probe.py  status_codes.py
(+8 files in other folders)
